styles/styles.css
* {
  box-sizing: border-box;
}

body {
  background-color: rgb(55, 55, 55);
  color: aliceblue;
}
h1 {
  text-align: center;
}

.you {
  border-bottom: 2px solid black;
  padding: 0.5rem;
}

.others {
  padding: 0.5rem;
  border-bottom: 2px solid black;
  border-collapse: collapse;
}

.text-format {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

div[class="you text-format"] {
  align-items: flex-end;
}

.chat-body {
  min-height: 30rem;
  max-height: 30rem;
}

form > div {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

form > div > input {
  flex: 1;
}

/* name display info */

.name-display {
  text-align: center;
}

/* notify which room you have joined */
#room-info {
  text-align: center;
  background-color: rgb(48, 39, 39);
}

